[gd_scene load_steps=2 format=3 uid="uid://tc38h7aqwbdu"]

[ext_resource type="Script" path="res://scripts/ui/cardContainer.gd" id="1_6j2kj"]

[node name="cardContainer" type="CanvasLayer"]
script = ExtResource("1_6j2kj")

[node name="cardPos" type="Node2D" parent="."]

[node name="1" type="Marker2D" parent="cardPos"]
position = Vector2(350, 600)

[node name="2" type="Marker2D" parent="cardPos"]
position = Vector2(500, 600)

[node name="3" type="Marker2D" parent="cardPos"]
position = Vector2(650, 600)

[node name="4" type="Marker2D" parent="cardPos"]
position = Vector2(800, 600)

[node name="useCard" type="Button" parent="."]
offset_left = 544.0
offset_top = 444.0
offset_right = 618.0
offset_bottom = 475.0
text = "use card"

[connection signal="child_entered_tree" from="cardPos" to="." method="_on_card_pos_child_entered_tree"]
[connection signal="pressed" from="useCard" to="." method="_on_use_card_pressed"]
